# kage

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TESTING.md  config.py  main.py  plan.md  pyproject.toml  requirements.txt
.codex/environments/: environment.toml
benchmarks/: deep_capability_benchmark.py
benchmarks/reports/: deep_benchmark_20260304_213407.json  deep_benchmark_20260304_213407.md  (+17 more)
connectors/: __init__.py  _apple.py  apple_bridge.py  apple_calendar.py  calendar.py  memory_ops.py  notes.py  notify.py  reminders.py  shell.py  things.py  web_fetch.py  web_search.py
core/: __init__.py  app_runner.py  audio_coordinator.py  brain.py  brain_generation.py  brain_guardrails.py  brain_prompting.py  chat_commands.py  chat_shell.py  cli.py  clipboard.py  intent_signals.py  listener.py  memory.py  runtime_events.py  session.py  speaker.py  textual_chat.py
core/agent/: __init__.py  (+5 more)
docs/: PERFORMANCE_M4.md
tests/: test_agent_loop.py  test_agent_parser.py  test_audio_coordinator.py  test_brain.py  test_brain_generation.py  test_brain_policy.py  test_chat_commands.py  test_cli.py  test_config.py  test_connectors.py  test_entity_store.py  test_execution_planner.py  test_extractor.py  test_heartbeat.py  test_intent_signals.py  test_listener.py  test_listener_interrupt.py  test_llm_extractor.py  test_memory.py  test_memory_store.py  test_planner.py  test_proactive.py  test_request_orchestrator.py  test_session_controller.py  test_speaker_pronunciation.py  test_textual_chat.py  test_things.py  test_tool_registry.py  test_tool_registry_outcomes.py
(+22 files in other folders)
